--- a/frontend/CoffeeMekMonitoringServer/appsettings.Development.json
+++ b/frontend/CoffeeMekMonitoringServer/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "Backend": {
+    "Url": "http://localhost:3000/api"
+  },
+  "UseFakes": false
 }
