--- a/frontend/CoffeeMekMonitoringServer/appsettings.json
+++ b/frontend/CoffeeMekMonitoringServer/appsettings.json
@@ -1,9 +1,13 @@
 {
+  "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "Backend": {
+    "Url": "http://localhost:3000/api"
+  },
+  "UseFakes": true
 }
