--- a/frontend/CoffeeMekMonitoringServer/CoffeeMekMonitoringServer.csproj
+++ b/frontend/CoffeeMekMonitoringServer/CoffeeMekMonitoringServer.csproj
@@ -18,4 +18,8 @@
     <AdditionalFiles Include="Pages\Components\Modals\UserModal.razor" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Services\Token\ITokenService.cs" />
+  </ItemGroup>
+
 </Project>
