--- a/frontend/CoffeeMekMonitoringServer/appsettings.json
+++ b/frontend/CoffeeMekMonitoringServer/appsettings.json
@@ -1,13 +1,22 @@
 {
-  "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "CoffeeMekMonitoringServer": "Debug"
     }
   },
   "Backend": {
-    "Url": "http://localhost:3000/api"
+    "Url": "http://10.1.11.112:3000/"
   },
-  "UseFakes": true
+  "KaffeioApi": {
+    "BaseUrl": "http://10.1.11.112:3000/"
+  },
+  "Authentication": {
+    "RequireHttps": false
+  },
+  "UseFakes": true,
+  "DeveloperSettings": {
+    "AutofillCredentials": true,
+    "EnableDetailedLogging": true
+  }
 }
