--- a/backend-queues/package.json
+++ b/backend-queues/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@nestjs/axios": "^4.0.0",
+    "@nestjs/bullmq": "^11.0.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -35,7 +36,7 @@
     "@types/multer": "^1.4.12",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
-    "class-transformer": "^0.5.1",
+    "bullmq": "^5.53.2",
     "class-validator": "^0.14.2",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
