Add service interfaces and models for Lot, Facility, Machine, Customer, Order, and ProductionSchedule

--- a/frontend/CoffeeMekMonitoringServer/appsettings.Development.json
+++ b/frontend/CoffeeMekMonitoringServer/appsettings.Development.json
@@ -14,7 +14,7 @@
   "Authentication": {
     "RequireHttps": false
   },
-  "UseFakes": false,
+  "UseFakes": true,
   "DeveloperSettings": {
     "AutofillCredentials": true,
     "EnableDetailedLogging": true
