Implement auto-login feature and update customer and order models for API compatibility

--- a/frontend/CoffeeMekMonitoringServer/appsettings.Development.json
+++ b/frontend/CoffeeMekMonitoringServer/appsettings.Development.json
@@ -16,7 +16,7 @@
   },
   "UseFakes": true,
   "DeveloperSettings": {
-    "AutofillCredentials": true,
+    "AutofillCredentials": false,
     "EnableDetailedLogging": true
   }
 }
